--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@gridsome/plugin-google-analytics": "^0.1.2",
+    "@gridsome/plugin-sitemap": "^0.4.0",
     "assets-loader": "^0.5.2",
     "codyhouse-framework": "^2.8.9",
     "express": "^4.17.1",
