--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@gridsome/plugin-google-analytics": "^0.1.2",
     "@gridsome/plugin-sitemap": "^0.4.0",
     "@gridsome/source-airtable": "^0.2.0",
+    "@gridsome/source-filesystem": "^0.6.2",
+    "@gridsome/transformer-remark": "^0.6.4",
     "assets-loader": "^0.5.2",
     "codyhouse-framework": "^2.8.9",
     "express": "^4.17.1",
     "gridsome": "^0.7.0",
     "gridsome-plugin-gtm": "^0.1.1",
+    "gridsome-remark-figure-caption": "^1.2.0",
     "gridsome-source-google-sheets": "^0.4.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
