--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "gridsome build"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@gridsome/plugin-google-analytics": "^0.1.2",
     "@gridsome/plugin-sitemap": "^0.4.0",
     "@gridsome/source-airtable": "^0.2.0",
@@ -24,5 +25,10 @@
     "serve-static": "^1.14.1",
     "style-resources-loader": "^1.4.1",
     "vue-hotjar": "^1.3.0"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^2.0.2"
   }
 }
