--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@gridsome/plugin-google-analytics": "^0.1.2",
     "@gridsome/plugin-sitemap": "^0.4.0",
     "@gridsome/source-airtable": "^0.2.0",
     "@gridsome/source-filesystem": "^0.6.2",
@@ -24,6 +23,7 @@
     "sass-loader": "^10.1.1",
     "serve-static": "^1.14.1",
     "style-resources-loader": "^1.4.1",
+    "typeface-open-sans": "^1.1.13",
     "vue-hotjar": "^1.3.0"
   },
   "devDependencies": {
