--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/vue-fontawesome": "^2.0.2"
+    "@fortawesome/vue-fontawesome": "^2.0.2",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-chain": "^6.5.1"
   }
 }
