--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "gridsome-plugin-bundle-analyzer": "^1.0.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-chain": "^6.5.1"
   }
