--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
     "serve-static": "^1.14.1",
-    "style-resources-loader": "^1.4.1",
-    "typeface-open-sans": "^1.1.13",
-    "vue-hotjar": "^1.3.0"
+    "style-resources-loader": "^1.4.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
