--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
     "@gridsome/source-airtable": "^0.2.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.4",
+    "@hrwg/vue-marked": "0.0.2",
     "assets-loader": "^0.5.2",
     "codyhouse-framework": "^2.8.9",
     "express": "^4.17.1",
     "gridsome": "^0.7.0",
     "gridsome-plugin-gtm": "^0.1.1",
     "gridsome-remark-figure-caption": "^1.2.0",
+    "html-loader": "^3.1.0",
+    "markdown-loader": "^8.0.0",
+    "marked": "^4.0.12",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
     "serve-static": "^1.14.1",
-    "style-resources-loader": "^1.4.1"
+    "style-resources-loader": "^1.4.1",
+    "vue-markdown": "^2.2.4"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
