obrisano  contact i 301 sa contact na kontakt

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,9 @@
   from = "/blog/content-blog-*"
   to = "/blog/*"
   status = 301  
+
+
+[[redirects]]
+  from = "/contact/"
+  to = "/kontakt/"
+  status = 301  
