301 preparati-za-mrsavljenje na mrsavljenje

--- a/netlify.toml
+++ b/netlify.toml
@@ -29,4 +29,8 @@
   to = "/blog/"
   status = 301  
 
-  
+
+[[redirects]]
+  from = "/preparati-za-mrsavljenje/*"
+  to = "/mrsavljenje/*"
+  status = 301    
