--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "gridsome": "^0.7.0",
     "gridsome-plugin-gtm": "^0.1.1",
+    "gridsome-plugin-remark-shiki": "^0.6.0",
     "gridsome-remark-figure-caption": "^1.2.0",
     "html-loader": "^3.1.0",
     "markdown-loader": "^8.0.0",
