--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@gridsome/vue-remark": "^0.2.6",
     "@hrwg/vue-marked": "0.0.2",
     "assets-loader": "^0.5.2",
+    "axios": "^1.3.3",
     "codyhouse-framework": "^2.9.2",
     "express": "^4.17.1",
     "gridsome": "^0.7.0",
