pokušaj redirekcije pre build

--- a/netlify.toml
+++ b/netlify.toml
@@ -32,3 +32,9 @@
   from = "/preparati-za-mrsavljenje/*"
   to = "/mrsavljenje/:splat"
   status = 301
+
+
+  [[redirects]]
+  from = "https://flpshop.rs/*"
+  to = "https://flpshop.rs/:splat"
+  status = 301
